--- a/research.html
+++ b/research.html
@@ -19,27 +19,27 @@
  <!--/radix_placeholder_import_source-->
 
   <!--radix_placeholder_meta_tags-->
-  <title>Ralf Martin: Selected Research Projects</title>
+  <title>Ralf Martin: Selected Research Themes</title>
   
   
   
   
   <!--  https://developers.facebook.com/docs/sharing/webmasters#markup -->
-  <meta property="og:title" content="Ralf Martin: Selected Research Projects"/>
+  <meta property="og:title" content="Ralf Martin: Selected Research Themes"/>
   <meta property="og:type" content="article"/>
   <meta property="og:locale" content="en_US"/>
   <meta property="og:site_name" content="Ralf Martin"/>
   
   <!--  https://dev.twitter.com/cards/types/summary -->
   <meta property="twitter:card" content="summary"/>
-  <meta property="twitter:title" content="Ralf Martin: Selected Research Projects"/>
+  <meta property="twitter:title" content="Ralf Martin: Selected Research Themes"/>
   <meta property="twitter:site" content="@mondpanther"/>
   
   <!--/radix_placeholder_meta_tags-->
   <!--radix_placeholder_rmarkdown_metadata-->
   
   <script type="text/json" id="radix-rmarkdown-metadata">
-  {"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["title","description"]}},"value":[{"type":"character","attributes":{},"value":["Selected Research Projects"]},{"type":"NULL"}]}
+  {"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["title","description"]}},"value":[{"type":"character","attributes":{},"value":["Selected Research Themes"]},{"type":"NULL"}]}
   </script>
   <!--/radix_placeholder_rmarkdown_metadata-->
   <!--radix_placeholder_navigation_in_header-->
@@ -1270,7 +1270,7 @@
 <!--radix_placeholder_front_matter-->
 
 <script id="distill-front-matter" type="text/json">
-{"title":"Selected Research Projects","authors":[]}
+{"title":"Selected Research Themes","authors":[]}
 </script>
 
 <!--/radix_placeholder_front_matter-->
@@ -1292,15 +1292,29 @@
 <!--/radix_placeholder_site_before_body-->
 
 <div class="d-title">
-<h1>Selected Research Projects</h1>
+<h1>Selected Research Themes</h1>
 
 </div>
 
 
 <div class="d-article">
-<h1 id="adoption-of-pro-social-technology">Adoption of pro social Technology</h1>
-<h1 id="design-of-industrial-policy">Design of Industrial Policy</h1>
-<h1 id="evaluation-of-climate-change-policy">Evaluation of Climate Change Policy</h1>
+<h2 id="adoption-of-prosocial-technology">Adoption of prosocial Technology</h2>
+<p>One pathway for transition to a clean economy is the wide spread adoption of pro social technologies; i.e. technologies with positive values for others rather than the adopter. We study the adoption of such a technology by building a virtual power plant.</p>
+<ul>
+<li><a href="https://powbalenergy.net/">Powbal</a></li>
+</ul>
+<h2 id="design-and-evaluation-of-industrial-policy">Design and evaluation of Industrial Policy</h2>
+<p>Industrial policy in the form of targeted support for specific sectors or technologies enjoys a renaissance. But which sectors exactly should be supported? I argue that governments should identify existing market failures and use industrial policy to correct these if no other tools are available. The most obvious market failure relevant to this are differences in knowledge spillovers from different technologies. I develop the idea over a number of different reports and papers including:</p>
+<ul>
+<li><a href="http://cep.lse.ac.uk/_new/publications/abstract.asp?index=6073">Sustainable growth in the UK</a></li>
+</ul>
+<h2 id="evaluation-of-climate-change-policy">Evaluation of Climate Change Policy</h2>
+<h2 id="what-determines-the-direction-of-innovation">What determines the direction of innovation?</h2>
+<h2 id="the-causes-and-consequence-of-online-mis-information">The causes and consequence of online mis-information</h2>
+<p>There is no doubt much dis-information on social media. However, does this make any difference for tangible and relevant outcomes such as who wins elections or who gets infected in a pandemic?</p>
+<ul>
+<li><a href="https://mondpanther.github.io/economemics.github.io/mindbody.html">Infections of the body and the mind</a></li>
+</ul>
 <!--radix_placeholder_article_footer-->
 <!--/radix_placeholder_article_footer-->
 </div>
