--- a/_posts/2024-03-04-virtualpowerplant/virtualpowerplant.html
+++ b/_posts/2024-03-04-virtualpowerplant/virtualpowerplant.html
@@ -113,12 +113,12 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   <!--radix_placeholder_rmarkdown_metadata-->
 
   <script type="text/json" id="radix-rmarkdown-metadata">
-  {"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["title","description","author","date","output"]}},"value":[{"type":"character","attributes":{},"value":["Building virtual power plants"]},{"type":"character","attributes":{},"value":["Generating electricity one smart device at a time.\n"]},{"type":"list","attributes":{},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["name","url"]}},"value":[{"type":"character","attributes":{},"value":["Ralf Martin"]},{"type":"character","attributes":{},"value":["https://mondpanther.github.io/wwwmondpanther/"]}]}]},{"type":"character","attributes":{},"value":["2024-03-04"]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["distill::distill_article"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["self_contained"]}},"value":[{"type":"logical","attributes":{},"value":[false]}]}]}]}
+  {"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["title","description","author","date","output","categories","preview"]}},"value":[{"type":"character","attributes":{},"value":["Building virtual power plants"]},{"type":"character","attributes":{},"value":["Generating electricity one smart device at a time.\n"]},{"type":"list","attributes":{},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["name","url"]}},"value":[{"type":"character","attributes":{},"value":["Ralf Martin"]},{"type":"character","attributes":{},"value":["https://mondpanther.github.io/wwwmondpanther/"]}]}]},{"type":"character","attributes":{},"value":["2024-03-04"]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["distill::distill_article"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["self_contained"]}},"value":[{"type":"logical","attributes":{},"value":[false]}]}]},{"type":"character","attributes":{},"value":["Climate Change","Electricity","India"]},{"type":"character","attributes":{},"value":["avatar.png"]}]}
   </script>
   <!--/radix_placeholder_rmarkdown_metadata-->
   
   <script type="text/json" id="radix-resource-manifest">
-  {"type":"NULL"}
+  {"type":"character","attributes":{},"value":["avatar.png","virtualpowerplant_files/anchor-4.2.2/anchor.min.js","virtualpowerplant_files/bowser-1.9.3/bowser.min.js","virtualpowerplant_files/distill-2.2.21/template.v2.js","virtualpowerplant_files/header-attrs-2.25/header-attrs.js","virtualpowerplant_files/jquery-3.6.0/jquery-3.6.0.js","virtualpowerplant_files/jquery-3.6.0/jquery-3.6.0.min.js","virtualpowerplant_files/jquery-3.6.0/jquery-3.6.0.min.map","virtualpowerplant_files/popper-2.6.0/popper.min.js","virtualpowerplant_files/tippy-6.2.7/tippy-bundle.umd.min.js","virtualpowerplant_files/tippy-6.2.7/tippy-light-border.css","virtualpowerplant_files/tippy-6.2.7/tippy.css","virtualpowerplant_files/tippy-6.2.7/tippy.umd.min.js","virtualpowerplant_files/webcomponents-2.0.0/webcomponents.js"]}
   </script>
   <!--radix_placeholder_navigation_in_header-->
   <!--/radix_placeholder_navigation_in_header-->
@@ -1534,6 +1534,11 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <h1>Building virtual power plants</h1>
 
 <!--radix_placeholder_categories-->
+<div class="dt-tags">
+<div class="dt-tag">Climate Change</div>
+<div class="dt-tag">Electricity</div>
+<div class="dt-tag">India</div>
+</div>
 <!--/radix_placeholder_categories-->
 <p><p>Generating electricity one smart device at a time.</p></p>
 </div>
